2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, client-src/rundump.c,
	  client-src/runtar.c, client-src/selfcheck.c,
	  client-src/sendbackup.c, client-src/senddiscover.c,
	  xfer-src/filter-process.c: Always free the result of safe_env.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amandates.c, client-src/sendsize.c,
	  common-src/ammessage.c: Fix bug found by coverity.
	* device-src/ndmp-device.c (ndmp_device_eject): Call open_connection.

2015-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Cleanup.

2015-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cleanup.pm: Log the notes
	* perl/Amanda/Report.pm: Parse amcleanup log line
	* perl/Amanda/Report/human.pm (PROGRAM_ORDER): Add amcleanup
	* perl/Amanda/Rest/Runs.pmi (kill): Accept notes argument
	* server-src/amcleanup.pl: Add --note argument
	* server-src/logfile.h (logtype_e): Add P_AMCLEANUP
	* server-src/logfile.c (logtype_str): Add "amcleanup"
	* perl/Amanda/Logfile.swg: Add P_AMCLEANUP
	* man/xml-source/amcleanup.8.xml: Document --note argument

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix progress_func and set timeout to 0.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: ADD NEARLINE storage.
	* man/xml-source/amanda-devices.7.xml: Document NEARLINE storage.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (progress_function): Fail on timeout.
	* device-src/s3-device.h (_S3_by_thread): Add tiemout.
	* device-src/s3.c (RESULT_HANDLING_ALWAYS_RETRY): Add
	  CURLE_ABORTED_BY_CALLBACK.

2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix wrong variable.

2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl (backup): Create an archive directory
	  with the same permission as the data directory.
