@@ -1,4 +1,8 @@
 2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Add a 'requeue' line to the amdump log file.
+	* perl/Amanda/Status.pm: Better handling of retry.
+
+2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amgtar.c, client-src/rundump.c,
 	  client-src/runtar.c, client-src/selfcheck.c,
 	  client-src/sendbackup.c, client-src/senddiscover.c,
